--- a/public/最佳工作序列.html
+++ b/public/最佳工作序列.html
@@ -5,13 +5,13 @@
 <body>
         <script>
                 var n,id,time,profit,deadline,Maxdeadline;
-                var Work = new Array();	//创建用于存储信息的数组
-                var Value = new Array();//创建用于计算价值的数组
+                var Work = new Array();	//创建用于计算的数组
+                var Value = new Array();//创建用于比值的数组
             
-                for(var i=0;i<200;i+=1)//创建二维数组
+                for(var i=0;i<200;i+=1)//创建二维虚拟数组
                 {	
                     Value[i] = new Array();
-                    for(var j=0;j<200;j+=1)//初始化数组
+                    for(var j=0;j<200;j+=1)
                         Value[i][j] = 0;
                 }
                 
