--- a/public/跳马问题.html
+++ b/public/跳马问题.html
@@ -3,6 +3,7 @@
             <head>  
             </head>  
                 <body>     
+                    <center>
 
                     <form action="/test.php" method="get">  
                             跳马  
@@ -17,6 +18,7 @@
                             <br>  
                             <input type="submit" value="提交" onclick="main()"/>  
                         </form>  
+                    </center>
       
       
                     <script>  
