--- a/public/quadtree.html
+++ b/public/quadtree.html
@@ -16,23 +16,30 @@
     float:center;
     padding:10px;	 	 
 }
+        #header {
+            background-color:black;
+            color:white;
+            text-align:center;
+            padding:5px;
+        }
 </style>
 
 <body>
     <center>
-    <h1>4Tree</h1>
+        <div id="header">
+    <h1>QuadTree</h1>
+</div>
     <div id="section">
-        1, 1, 1, 1, 2, 2, 3, 3,<br>
-        1, 1, 1, 1, 2, 2, 3, 3,<br>
-        1, 1, 1, 1, 4, 4, 5, 5,<br>
-        1, 1, 1, 1, 4, 4, 5, 5,<br>
-        6, 6, 7, 8,13,13,14,14,<br>
-        6, 6, 9,10,13,13,14,14,<br>
-        11,11,12,12,15,16,19,19,<br>
-        11,11,12,12,17,18,19,19<br>
-        <br>
-        
-        <input type="button" value = "转换"  onclick="quadtree()"/>
+            1, 1, 1, 1, 2, 2, 3, 3,<br>
+            1, 1, 1, 1, 2, 2, 3, 3,<br>
+            1, 1, 1, 1, 4, 4, 5, 5,<br>
+            1, 1, 1, 1, 4, 4, 5, 5,<br>
+            6, 6, 7, 8,13,13,14,14,<br>
+            6, 6, 9,10,13,13,14,14,<br>
+            11,11,12,12,15,16,19,19,<br>
+            11,11,12,12,17,18,19,19<br>
+            <br>
+    <input type="button" value = "转换"  onclick="quadtree()"/>
     </div>
     <div id="section1">
         结果：
