--- a/public/symbolize.html
+++ b/public/symbolize.html
@@ -5,12 +5,20 @@
     <title>Symbolic</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style>
+            #header {
+                background-color:black;
+                color:white;
+                text-align:center;
+                padding:5px;
+            }
     </style>
 </head>
 
 <body>
     <center>
-    Symbolize
+            <div id="header">
+                    <h1>Symbolize</h1>
+                    </div>
     <br>
     <a>载入文件（可叠加）：</a><input type="file" multiple="true" id="file" style="width: 200px;" />
     <button onclick="ReadFile()">显示</button>
