--- a/public/leftturn.html
+++ b/public/leftturn.html
@@ -8,11 +8,10 @@
       }
       #head
       {
-          /*background-color:black;*/
-          color:blue;
-          text-align:center;
-          padding:5px;
-          height: 30px;
+        background-color:black;
+        color:white;
+        text-align:center;
+        padding:5px;
       }
       #nav
       {
