--- a/public/compress1.html
+++ b/public/compress1.html
@@ -47,8 +47,8 @@
         <a>压缩等级：</a>
         <input id="number" style="height: 21px; width: 88px;"/>
         <button onclick="CutDown=true;ShowMap()" style="height:27px;width:90px;margin-top: 6px;">压缩并显示</button>
-        <a style="margin-left:18px">压缩率：</a>
-        <a id="result" style="color: red">未压缩</a>
+       <!--  <a style="margin-left:18px">压缩率：</a>
+        <a id="result" style="color: red">未压缩</a> -->
         <canvas id="map" style="border:1px solid #000;margin-top:5px;"></canvas>
         <div id="footer">
         </center>
